# Proyectos-

./: .gitignore  README.md  controller.py  ejemplo_visual.py  model.py  pyproject.toml  requirements.txt  setup.py  view.py
docs/: .gitignore  API.md  api_reference.md  index.md  installation.md  usage.md
src/: main.py
src/mi_paquete/: __init__.py  app.py  modelo_tareas.py
src/mi_paquete/templates/: index.html
tests/: __init__.py  test_modelo1.py
